tests/files/type_checker_tests/should_fail/012.cmdr
//Should fail when doing pre increment on something that isn't a float or int
a = true;
x = ++a;